// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeaturedCard should render 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    cardColor="#00676D"
    style={
      Object {
        "backgroundColor": "#00676D",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        overlayColor="#00676D"
        overlayType="featured"
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/800/1600/?random",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 16,
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <Text
          numberOfLines={3}
          style={
            Object {
              "color": "#F4F7F8",
              "fontFamily": "InterUI-Black",
              "fontSize": 36,
              "lineHeight": 41.4,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#F4F7F8",
              }
            }
          >
            Are you telling me that you built a time machine out of a DeLorean?
          </Text>
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingTop": 8,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`FeaturedCard should render a loading state with isLoading 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    cardColor="#00676D"
    isLoading={true}
    style={
      Object {
        "backgroundColor": "#00676D",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <Image
        fadeDuration={250}
        isLoading={true}
        onLoad={[Function]}
        overlayColor="#DBDBD9"
        overlayType="featured"
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/800/1600/?random",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 32,
            "marginBottom": 16,
            "paddingHorizontal": 12,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 16,
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <Text
          numberOfLines={3}
          style={
            Object {
              "color": "#F4F7F8",
              "fontFamily": "InterUI-Black",
              "fontSize": 36,
              "lineHeight": 41.4,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#F4F7F8",
              }
            }
          >
            Are you telling me that you built a time machine out of a DeLorean?
          </Text>
        </Text>
        <Text
          bold={false}
          italic={false}
          numberOfLines={3}
          style={
            Object {
              "color": "#F4F7F8",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "rgba(244, 247, 248, 0.6)",
              }
            }
          >
            The way I see it, if you’re going to build a time machine into a car, why not do it with some style?
          </Text>
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingTop": 8,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`FeaturedCard should render with a custom actionIcon 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    cardColor="#00676D"
    style={
      Object {
        "backgroundColor": "#00676D",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        overlayColor="#00676D"
        overlayType="featured"
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/800/1600/?random",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 16,
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <Text
          numberOfLines={3}
          style={
            Object {
              "color": "#F4F7F8",
              "fontFamily": "InterUI-Black",
              "fontSize": 36,
              "lineHeight": 41.4,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#F4F7F8",
              }
            }
          >
            Are you telling me that you built a time machine out of a DeLorean?
          </Text>
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingTop": 8,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`FeaturedCard should render with a custom theme 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    cardColor="salmon"
    style={
      Object {
        "backgroundColor": "salmon",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        overlayColor="salmon"
        overlayType="featured"
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/800/1600/?random",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 16,
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <Text
          numberOfLines={3}
          style={
            Object {
              "color": "#F4F7F8",
              "fontFamily": "InterUI-Black",
              "fontSize": 36,
              "lineHeight": 41.4,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#F4F7F8",
              }
            }
          >
            Are you telling me that you built a time machine out of a DeLorean?
          </Text>
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingTop": 8,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`FeaturedCard should render with a summary 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    cardColor="#00676D"
    style={
      Object {
        "backgroundColor": "#00676D",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        overlayColor="#00676D"
        overlayType="featured"
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/800/1600/?random",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 16,
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <Text
          numberOfLines={3}
          style={
            Object {
              "color": "#F4F7F8",
              "fontFamily": "InterUI-Black",
              "fontSize": 36,
              "lineHeight": 41.4,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#F4F7F8",
              }
            }
          >
            Are you telling me that you built a time machine out of a DeLorean?
          </Text>
        </Text>
        <Text
          bold={false}
          italic={false}
          numberOfLines={3}
          style={
            Object {
              "color": "#F4F7F8",
              "fontFamily": "InterUI-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "rgba(244, 247, 248, 0.6)",
              }
            }
          >
            The way I see it, if you’re going to build a time machine into a car, why not do it with some style?
          </Text>
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingTop": 8,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`FeaturedCard should render with custom LabelComponent 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    cardColor="#00676D"
    style={
      Object {
        "backgroundColor": "#00676D",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        overlayColor="#00676D"
        overlayType="featured"
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/800/1600/?random",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
      />
      <View
        bordered={false}
        disabled={false}
        pill={false}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(255, 255, 255, 0.4)",
            "borderColor": "rgba(255, 255, 255, 0.4)",
            "borderRadius": 16,
            "borderWidth": 0,
            "elevation": 2,
            "flexDirection": "row",
            "height": 32,
            "justifyContent": "center",
            "opacity": 1,
            "overflow": "hidden",
            "paddingHorizontal": 12,
          }
        }
      >
        <Text
          style={
            Object {
              "alignItems": "center",
              "color": "#FFFFFF",
              "fontFamily": "InterUI-Bold",
              "fontSize": 12,
              "justifyContent": "center",
              "lineHeight": 18,
              "textAlign": "center",
            }
          }
        >
          Custom LabelComponent
        </Text>
      </View>
      <View
        style={
          Object {
            "paddingHorizontal": 16,
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <Text
          numberOfLines={3}
          style={
            Object {
              "color": "#F4F7F8",
              "fontFamily": "InterUI-Black",
              "fontSize": 36,
              "lineHeight": 41.4,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#F4F7F8",
              }
            }
          >
            Are you telling me that you built a time machine out of a DeLorean?
          </Text>
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingTop": 8,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`FeaturedCard should render with custom labelText 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    cardColor="#00676D"
    style={
      Object {
        "backgroundColor": "#00676D",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        overlayColor="#00676D"
        overlayType="featured"
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/800/1600/?random",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
      />
      <View
        bordered={false}
        disabled={false}
        pill={false}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(255, 255, 255, 0.4)",
            "borderColor": "rgba(255, 255, 255, 0.4)",
            "borderRadius": 16,
            "borderWidth": 0,
            "elevation": 2,
            "flexDirection": "row",
            "height": 32,
            "justifyContent": "center",
            "opacity": 1,
            "overflow": "hidden",
            "paddingHorizontal": 12,
          }
        }
      >
        <Text
          style={
            Object {
              "alignItems": "center",
              "color": "#FFFFFF",
              "fontFamily": "InterUI-Bold",
              "fontSize": 12,
              "justifyContent": "center",
              "lineHeight": 18,
              "textAlign": "center",
            }
          }
        >
          Quote
        </Text>
      </View>
      <View
        style={
          Object {
            "paddingHorizontal": 16,
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <Text
          numberOfLines={3}
          style={
            Object {
              "color": "#F4F7F8",
              "fontFamily": "InterUI-Black",
              "fontSize": 36,
              "lineHeight": 41.4,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#F4F7F8",
              }
            }
          >
            Are you telling me that you built a time machine out of a DeLorean?
          </Text>
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingTop": 8,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`FeaturedCard should should render a like icon 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    cardColor="#00676D"
    style={
      Object {
        "backgroundColor": "#00676D",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        overlayColor="#00676D"
        overlayType="featured"
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/800/1600/?random",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 16,
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <Text
          numberOfLines={3}
          style={
            Object {
              "color": "#F4F7F8",
              "fontFamily": "InterUI-Black",
              "fontSize": 36,
              "lineHeight": 41.4,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#F4F7F8",
              }
            }
          >
            Are you telling me that you built a time machine out of a DeLorean?
          </Text>
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingTop": 8,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`FeaturedCard should should render as isLiked 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    cardColor="#00676D"
    style={
      Object {
        "backgroundColor": "#00676D",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        overlayColor="#00676D"
        overlayType="featured"
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/800/1600/?random",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 16,
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <Text
          numberOfLines={3}
          style={
            Object {
              "color": "#F4F7F8",
              "fontFamily": "InterUI-Black",
              "fontSize": 36,
              "lineHeight": 41.4,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#F4F7F8",
              }
            }
          >
            Are you telling me that you built a time machine out of a DeLorean?
          </Text>
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingTop": 8,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`FeaturedCard should should render as isLive 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    cardColor="#00676D"
    style={
      Object {
        "backgroundColor": "#00676D",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        overlayColor="#00676D"
        overlayType="featured"
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/800/1600/?random",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
      />
      <View
        bordered={false}
        disabled={false}
        pill={false}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#17B582",
            "borderColor": "#17B582",
            "borderRadius": 16,
            "borderWidth": 2,
            "elevation": 2,
            "flexDirection": "row",
            "height": 32,
            "justifyContent": "center",
            "opacity": 1,
            "overflow": "hidden",
            "paddingHorizontal": 12,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={7}
          bbWidth={7}
          height={7}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "marginRight": 8,
              },
              null,
              Object {
                "flex": 0,
                "height": 7,
                "width": 7,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={7}
        >
          <RNSVGGroup
            fill={
              Array [
                0,
                4278190080,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            font={Object {}}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={Array []}
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            vectorEffect={0}
            x={0}
            y={0}
          >
            <RNSVGCircle
              cx="12"
              cy="12"
              fill={
                Array [
                  0,
                  4294967295,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              r="12"
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <Text
          style={
            Object {
              "alignItems": "center",
              "color": "#FFFFFF",
              "fontFamily": "InterUI-Bold",
              "fontSize": 12,
              "justifyContent": "center",
              "lineHeight": 18,
              "textAlign": "center",
            }
          }
        >
          Live
        </Text>
      </View>
      <View
        style={
          Object {
            "paddingHorizontal": 16,
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <Text
          numberOfLines={3}
          style={
            Object {
              "color": "#F4F7F8",
              "fontFamily": "InterUI-Black",
              "fontSize": 36,
              "lineHeight": 41.4,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#F4F7F8",
              }
            }
          >
            Are you telling me that you built a time machine out of a DeLorean?
          </Text>
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingTop": 8,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`FeaturedCard should should render with an action "button" 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    cardColor="#00676D"
    style={
      Object {
        "backgroundColor": "#00676D",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        overlayColor="#00676D"
        overlayType="featured"
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/800/1600/?random",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 16,
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <Text
          numberOfLines={3}
          style={
            Object {
              "color": "#F4F7F8",
              "fontFamily": "InterUI-Black",
              "fontSize": 36,
              "lineHeight": 41.4,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#F4F7F8",
              }
            }
          >
            Are you telling me that you built a time machine out of a DeLorean?
          </Text>
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingTop": 8,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;
